@@ -25,6 +25,10 @@ Bugs Fixed
 - Opening a blob with modes 'r+' or 'a' would fail when the blob had no
   committed changes.
 
+- PersistentList's sort method did not allow passing of keyword parameters.
+  Changed its sort parameter list to match that of its (Python 2.4+)
+  UserList base class.
+
 3.9.0b5 (2009-08-06)
 ====================
 
